# simple_chat

./: CMakeLists.txt  README.md  client.cpp  server.cpp  test.cpp  window_test.cpp
include/: config.h  logger.h
include/client/: contact_widget.h  main_window.h  net_worker.h
include/crypto/: crypto.h  key.h  ratchet.h  utilities.h
include/db/: database.h  entry.h
include/net/: client.h  connector.h  host.h  net.h  packet.h  peer.h  secure_socket.h  socket.h
include/server/: user.h
src/: config.cpp  logger.cpp
src/client/: main_window.cpp  net_worker.cpp
src/crypto/: crypto.cpp  key.cpp  ratchet.cpp  utilities.cpp
src/db/: database.cpp  entry.cpp
src/net/: client.cpp  connector.cpp  host.cpp  packet.cpp  peer.cpp  secure_socket.cpp  socket.cpp
src/server/: user.cpp
test/: test_aead.cpp  test_db.cpp  test_keygen.cpp  test_keys.cpp  test_ratchets.cpp  test_x3hd.cpp
